--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,6 @@
     <div id="status" class="status"></div>
     <audio id="audioPlayer" controls style="display: none;"></audio>
   </div>
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
