--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>录音应用</title>
+  <title>Michael Lu音</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>录音应用</h1>
+    <h1>Michael Lu音</h1>
     <button id="recordButton" class="record-button">
       <span class="icon">🎤</span>
-      <span class="text">开始录音</span>
+      <span class="text">Start Recording</span>
     </button>
     <div id="status" class="status"></div>
     <audio id="audioPlayer" controls style="display: none;"></audio>
